add register functionality

--- a/assets/src/app/theme.sass
+++ b/assets/src/app/theme.sass
@@ -17,4 +17,12 @@ $info: $fsyellow
 $footer-padding: 1rem 1.5rem 1rem
 $footer-background-color: $fsblue
 
+.Site
+	display: flex
+	min-height: 100vh
+	flex-direction: column
+.Site-content
+	flex: 1
+
+
 @import 'bulma'
