--- a/assets/src/app/app.sass
+++ b/assets/src/app/app.sass
@@ -28,3 +28,5 @@ $footer-background-color: $fsblue
 @import 'bulma-tooltip'
 @import 'bulma-divider'
 @import 'bulma-steps'
+@import 'bulma-checkradio'
+@import 'bulma-switch'
