update bulma steps, update deps

--- a/assets/src/app/app.sass
+++ b/assets/src/app/app.sass
@@ -27,6 +27,6 @@ $footer-background-color: $fsblue
 @import 'bulma'
 @import 'bulma-tooltip'
 @import 'bulma-divider'
-@import 'bulma-steps'
+@import "bulma-o-steps"
 @import 'bulma-checkradio'
 @import 'bulma-switch'
