--- a/assets/src/app/app.sass
+++ b/assets/src/app/app.sass
@@ -24,6 +24,28 @@ $footer-background-color: $fsblue
 .Site-content
 	flex: 1
 
+// The snackbar - position it at the bottom and in the middle of the screen
+.snackbar
+  z-index: 100; // Add a z-index if needed
+  left: 50%;
+  transform: translateX(-50%);
+  // Add animation: Take 0.5 seconds to fade in and out the snackbar.
+  // However, delay the fade out process for 2.5 seconds
+  -webkit-animation: fadein 0.5s
+  animation: fadein 0.5s
+  top: 2vh
+  padding-left: 5rem !important
+  padding-right: 5rem !important
+
+// Animations to fade the snackbar in and out
+@-webkit-keyframes fadein
+  from {top: 0; opacity: 0;}
+  to {top: 2vh; opacity: 1;}
+
+@keyframes fadein
+  from {top: 0; opacity: 0;}
+  to {top: 2vh; opacity: 1;}
+
 @import 'bulma'
 @import 'bulma-tooltip'
 @import 'bulma-divider'
